--- a/blueprints/soci-snapshotter/soci-snapshotter.yaml
+++ b/blueprints/soci-snapshotter/soci-snapshotter.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   amiSelectorTerms:
     - alias: al2023@latest
-  role: "<<KARPENTER_NODE_IAM_ROLE_NAME>>"
+  role: "karpenter-blueprints"
+  instanceStorePolicy: RAID0
   blockDeviceMappings:
   - deviceName: /dev/xvda
     ebs:
@@ -15,16 +16,33 @@ spec:
       iops: 16000
   securityGroupSelectorTerms:
   - tags:
-      karpenter.sh/discovery: "<<CLUSTER_NAME>>"
+      karpenter.sh/discovery: "karpenter-blueprints"
   subnetSelectorTerms:
   - tags:
-      karpenter.sh/discovery: "<<CLUSTER_NAME>>"
+      karpenter.sh/discovery: "karpenter-blueprints"
   userData: |
+    MIME-Version: 1.0
+    Content-Type: multipart/mixed; boundary="BOUNDARY"
+
+    --BOUNDARY
+    Content-Type: application/node.eks.aws
+
+    ---
     apiVersion: node.eks.aws/v1alpha1
     kind: NodeConfig
     spec:
       featureGates:
         FastImagePull: true
+      containerd:
+        config: |
+          [plugins."io.containerd.snapshotter.v1.soci"]
+            [plugins."io.containerd.snapshotter.v1.soci".blob]
+              max_concurrent_downloads_per_image = 20
+              concurrent_download_chunk_size = "16mb"
+              max_concurrent_unpacks_per_image = 12
+              discard_unpacked_layers = true
+
+    --BOUNDARY--
 ---
 apiVersion: karpenter.sh/v1
 kind: NodePool
@@ -71,7 +89,8 @@ metadata:
 spec:
   amiSelectorTerms:
     - alias: bottlerocket@latest
-  role: "<<KARPENTER_NODE_IAM_ROLE_NAME>>"
+  role: "karpenter-blueprints"
+  instanceStorePolicy: RAID0
   blockDeviceMappings:
     - deviceName: /dev/xvda
       ebs:
@@ -87,24 +106,27 @@ spec:
         encrypted: true
   securityGroupSelectorTerms:
   - tags:
-      karpenter.sh/discovery: "<<CLUSTER_NAME>>"
+      karpenter.sh/discovery: "karpenter-blueprints"
   subnetSelectorTerms:
   - tags:
-      karpenter.sh/discovery: "<<CLUSTER_NAME>>"
+      karpenter.sh/discovery: "karpenter-blueprints"
   userData: |
     [settings.container-runtime]
     snapshotter = "soci"
+
     [settings.container-runtime-plugins.soci-snapshotter]
     pull-mode = "parallel-pull-unpack"
+    
     [settings.container-runtime-plugins.soci-snapshotter.parallel-pull-unpack]
     max-concurrent-downloads-per-image = 20
     concurrent-download-chunk-size = "16mb"
     max-concurrent-unpacks-per-image = 12
     discard-unpacked-layers = true
+
     [settings.bootstrap-commands.k8s-ephemeral-storage]
     commands = [
         ["apiclient", "ephemeral-storage", "init"],
-        ["apiclient", "ephemeral-storage" ,"bind", "--dirs", "/var/lib/containerd", "/var/lib/kubelet", "/var/log/pods", "/var/lib/soci-snapshotter"]
+        ["apiclient", "ephemeral-storage" ,"bind", "--dirs", "/var/lib/soci-snapshotter"]
     ]
     essential = true
     mode = "always"
@@ -154,7 +176,7 @@ metadata:
 spec:
   amiSelectorTerms:
     - alias: al2023@latest
-  role: "<<KARPENTER_NODE_IAM_ROLE_NAME>>"
+  role: "karpenter-blueprints"
   blockDeviceMappings:
   - deviceName: /dev/xvda
     ebs:
@@ -164,10 +186,10 @@ spec:
       iops: 16000
   securityGroupSelectorTerms:
   - tags:
-      karpenter.sh/discovery: "<<CLUSTER_NAME>>"
+      karpenter.sh/discovery: "karpenter-blueprints"
   subnetSelectorTerms:
   - tags:
-      karpenter.sh/discovery: "<<CLUSTER_NAME>>"
+      karpenter.sh/discovery: "karpenter-blueprints"
 ---
 apiVersion: karpenter.sh/v1
 kind: NodePool
