--- a/blueprints/soci-snapshotter/soci-snapshotter.yaml
+++ b/blueprints/soci-snapshotter/soci-snapshotter.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   amiSelectorTerms:
     - alias: al2023@latest
-  role: "karpenter-blueprints"
+  role: "<<KARPENTER_NODE_IAM_ROLE_NAME>>"
   instanceStorePolicy: RAID0
   blockDeviceMappings:
   - deviceName: /dev/xvda
@@ -16,10 +16,10 @@ spec:
       iops: 16000
   securityGroupSelectorTerms:
   - tags:
-      karpenter.sh/discovery: "karpenter-blueprints"
+      karpenter.sh/discovery: "<<CLUSTER_NAME>>"
   subnetSelectorTerms:
   - tags:
-      karpenter.sh/discovery: "karpenter-blueprints"
+      karpenter.sh/discovery: "<<CLUSTER_NAME>>"
   userData: |
     MIME-Version: 1.0
     Content-Type: multipart/mixed; boundary="BOUNDARY"
